# gitbark-core

./: .gitignore  .pre-commit-config.yaml  README.adoc  README.md  bark_module.yaml  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ubuntu.yml
bark_core/: approvals.py  parents.py  signatures.py
bark_core/files/: file_not_modified.py
bark_core/parents/: force_push.py  invalid_parents.py  max_parents.py  require_valid_parents.py
bark_core/signatures/: approvals.py  require_approval.py  require_signature.py  util.py
bark_core/signatures/commands/: approve_cmd.py
tests/: conftest.py  test_approvals.py  test_files.py  test_parents.py  test_signatures.py  util.py
