[metadata]
name = bark-core
version = 0.0.1
description = "Core Bark rules and commands",

[options]
packages = find:
install_requires =
    pgpy >=0.6.0
    paramiko >=3.3.0.0

[options.entry_points]
bark_commit_rules =
	require_signature = bark_core.signatures.require_signature:RequireSignature
	require_valid_parents = bark_core.parents.require_valid_parents:RequireValidParents
	max_parents = bark_core.parents.max_parents:MaxParents
	file_not_modified = bark_core.files.file_not_modified:FileNotModified

bark_branch_rules =
	require_approval = bark_core.signatures.approvals:RequireApproval
	force_push = bark_core.parents.force_push:ForcePush

bark_commands =
	approve = bark_core.signatures.commands.approve_cmd:approve
