[metadata]
name = bark-core
version = 0.0.1
description = "Core Bark rules and commands",

[options]
packages = find:
install_requires =
    pgpy >=0.6.0
    paramiko >=3.3.0.0
    gitbark >=0.1.0

[options.extras_require]
dev =
    pytest
	pytest-gitbark @ git+https://https://github.com/YubicoLabs/pytest-gitbark.git
    gitbark @ git+https://github.com/YubicoLabs/gitbark.git

[options.entry_points]
bark_commit_rules =
	require_signature = bark_core.signatures:RequireSignature
	require_valid_parents = bark_core.parents:RequireValidParents
	max_parents = bark_core.parents:MaxParents
	file_not_modified = bark_core.files:FileNotModified

bark_ref_rules =
	require_approval = bark_core.approvals:RequireApproval
	require_fast_forward = bark_core.parents:RequireFastForward

bark_commands =
	approvals = bark_core.approvals:approvals
